lib_LIBRARIES = libklib.a
libklib_a_SOURCES = log/process_bar.c
libklib_a_SOURCES += log/keilog.c
libklib_a_SOURCES += parallel_tools/counter.c
libklib_a_SOURCES += parallel_tools/spinlock.c
libklib_a_SOURCES += util/apipthread.c
# AM_CPPFLAGS = $(AM_CPPFLAGS) -I$(top_srcdir)/include
klibincludedir=$(includedir)/klib
klibinclude_HEADERS=$(KLIBTOPDIR)/include/log/keilog.h
